# ChangeLog for net-im/kadu-tabs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -kadu-tabs-1.1.6-r1.ebuild:
  Removing Kadu 0.6.0.* ebuilds.

  14 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> +kadu-tabs-1.2.5.ebuild:
  Bumped.

  03 May 2009; Michał Ziąbkowski <mziab@o2.pl> +kadu-tabs-1.2.4.ebuild:
  Bumped.

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> kadu-tabs-1.1.6-r1.ebuild,
  kadu-tabs-1.2.1.ebuild, +kadu-tabs-1.2.3.ebuild, +metadata.xml:
  Bumped. Some repoman fixes.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Removed remnants of rc2 from Manifest.

  30 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-tabs-1.1.6.ebuild,
  +kadu-tabs-1.1.6-r1.ebuild:
  Rev-bumped

  30 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-tabs-1.1.6.ebuild:
  Fixed SRC_URI. Thx, badboy.

  30 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-tabs-1.1.6.ebuild:
  Updated homepage

  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-tabs-1.1.6.ebuild:
  Bumped. Removed previous version.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-tabs-1.1.5.ebuild:
  Removed cruft.

  31 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> +kadu-tabs-1.1.6.ebuild:
  Bumped.
