@@ -1,11 +1,7 @@
-DIST kadu-0.6.5.3.tar.bz2 1676317 RMD160 95609df3d2c75f765861234ee2bc2bf9eb36ab10 SHA1 0714e007e42ff4c9abecee6f9b47e62d291fb6f6 SHA256 ed2ff311d1896a6344af91e65c901d72f93e2e005989a82c6f35a4dbfced6a75
-DIST kadu-tabs-1.2.1.tar.bz2 17642 RMD160 957bbbddad1b546441949699cb57458b822cc4fc SHA1 5f5ce93dfdea8fec4478cf56142bd0056f52d49d SHA256 7f05e286250f89b5f1e700ca86fc7f4c41e33ce6357ae6fa7b543261da07db53
-DIST kadu-tabs-1.2.3.tar.bz2 17771 RMD160 09bae81911c5d1f97c9ec84a675754cc2091a02c SHA1 7e7dd75e9a1d762655119602899c77e7f01bd610 SHA256 4ad76613e9ac19cdf1e7ad5f179ab7374bf9505eff78f3ec0202d1f6f92babef
+DIST kadu-0.6.5.4-rc1.tar.bz2 1760131 RMD160 ead93dcc66fd7e9c7323f8501079674c155c63a4 SHA1 bb3f1818bdbbeef47ce9614ff74be62999275188 SHA256 bb4ac92211d71b269dd6b6bc4f0e1ba5af88adb8fc8d99815b00819d32206331
 DIST kadu-tabs-1.2.4.tar.bz2 20108 RMD160 45ba8d10526b340c83fb5030860257932f0d1f12 SHA1 e4963dcad58c00b97bcbee76015945738eb6175e SHA256 4836f4d15a7c3578e580a255eacb5fb398d2e1717b0674a011455ee5b234dc7a
 DIST kadu-tabs-1.2.5.tar.bz2 20082 RMD160 91663d990905f46e591bc8f2b3aa6efa78f1aee3 SHA1 4ce7f4ff1f7b6679c6ffe96ad34b992153ba8fca SHA256 a962327d8c03b3d324b64fe3940817a039878def0dd981e2c1080fff0cd93b46
-EBUILD kadu-tabs-1.2.1.ebuild 357 RMD160 4abb09141385158638e70ebaf5c2ceea2252a09f SHA1 218f957ce767e2a8291017b92247f310e93f761a SHA256 5d5e7e338b1d7f4c13e2d94135118d48f7b23f76e9f774b4ad22eaf4e65a9a05
-EBUILD kadu-tabs-1.2.3.ebuild 357 RMD160 4abb09141385158638e70ebaf5c2ceea2252a09f SHA1 218f957ce767e2a8291017b92247f310e93f761a SHA256 5d5e7e338b1d7f4c13e2d94135118d48f7b23f76e9f774b4ad22eaf4e65a9a05
 EBUILD kadu-tabs-1.2.4.ebuild 341 RMD160 e13c075d1fafa0bd3de05f24a985fa504a2150dd SHA1 bc61f79cf46dfef5177919f9762daaee4d3def47 SHA256 46283b9ede927cfe429e92f76019fb48e525e43b3585650faccd6bd56306cc60
 EBUILD kadu-tabs-1.2.5.ebuild 341 RMD160 e13c075d1fafa0bd3de05f24a985fa504a2150dd SHA1 bc61f79cf46dfef5177919f9762daaee4d3def47 SHA256 46283b9ede927cfe429e92f76019fb48e525e43b3585650faccd6bd56306cc60
-MISC ChangeLog 1274 RMD160 df503f3faa7b023965a3bb05bb1cedff9027518d SHA1 58583c835bb6e45287eac8fc7050c9b91fa573a2 SHA256 0993ffb327bbdd8466e95070982d79df8368a83bb48d7717d343a68773f0b938
+MISC ChangeLog 1393 RMD160 3e4a152f7f1d20f609542faea16d2372b537c3c6 SHA1 26743885fce893d9481766f6dcfeac1179b22d47 SHA256 f9e83b956f6be75e133061dc19accc0ee770ad7d18bf93050c963a262d006eb5
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
