@@ -1,17 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit kadu-base
-
-MOD_URI="http://www.kadu.net/~arvenil/${NAME}/download/0.6.5/${P}.tar.bz2"
-MOD_TYPE="ext"
-
-inherit kadu-mod
-
-DESCRIPTION="Tabbed chat module for Kadu"
-HOMEPAGE="http://kadu.net/~patryk"
-KEYWORDS="amd64 x86"
-
-IUSE=""
-
