@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -kadu-tabs-1.2.1.ebuild,
+  -kadu-tabs-1.2.3.ebuild:
+  Removed cruft.
+
   04 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -kadu-tabs-1.1.6-r1.ebuild:
   Removing Kadu 0.6.0.* ebuilds.
 
